--- a/Home.html
+++ b/Home.html
@@ -1,13 +1,187 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="Home.css">
-    <title>Document</title>
-</head>
-<body>
-    <h1 id="h1_01">Ramdhani 2.0</h1>
-</body>
+    <head>
+        <title>Indian Restaurant</title>
+        <link rel="icon" href="img/logo1.png">
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <script src='https://kit.fontawesome.com/a076d05399.js'></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link rel="stylesheet" href="css and js/style.css">
+    </head>
+    <body style="background:brown;">
+        <nav class="navbar navbar-inverse" id="header-nav">
+            <div class="container">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#mynavbar">
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="index.html"style="font-size:30px; color:brown" >
+                        <img src="img/logo1.png" alt="logo"style="height:50px;width:50px"class="pull-left visible-lg visible-md">
+                        <h3>Indian Restaurant</h3></a>
+                </div>
+                <div class="collapse navbar-collapse" id="mynavbar">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="menu.html"style="font-size:20px;color:brown;text-align:center">
+                            <i style='font-size:24px;display:block'class='fas'>&#xf2e7;</i> Menu</a>
+                        </li>
+                        <li>
+                            <a href="about.html"style="font-size:20px;color:brown;text-align:center">
+                            <i style='font-size:24px;display:block'class="material-icons">&#xe000;</i>About Us</a>
+                        </li>
+                        <li>
+                            <a href="map.html"style="font-size:20px;color:brown;text-align:center">
+                            <i style="font-size:24px;display: block;" class="fa">&#xf041;</i>Map</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+        <div class="container bottom ">
+            <div class="del">
+                <p>For Free delivery contact:<br>1234567890</p>
+                <img src="img/PngItem_37779.png" alt="bike" class="bike">
+            </div>
+        </div>
+        <div class="container bottom">
+            <div id="myCarousel" class="carousel slide box" data-ride="carousel">
+                <ol class="carousel-indicators">
+                <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                <li data-target="#myCarousel" data-slide-to="1"></li>
+                <li data-target="#myCarousel" data-slide-to="2"></li>
+                <li data-target="#myCarousel" data-slide-to="3"></li>
+                <li data-target="#myCarousel" data-slide-to="4"></li>
+                </ol>
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="img/slide1.jpg" alt="image" style="width:100%; height: 80vh;">
+                        <div class="carousel-caption">
+                            <h3 class="color">Welcome to Indian Restaurent</h3>
+                            <p>Have your food in a pleasant place</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="img/slide2.jpg" alt="image" style="width:100%; height: 80vh;">
+                        <div class="carousel-caption">
+                            <h3 class="color">Tiffen</h3>
+                            <p>6.00am to 11.30am</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="img/slide3.jpeg" alt="image" style="width:100%; height: 80vh;">
+                        <div class="carousel-caption">
+                            <h3 class="color">Lunch</h3>
+                            <p>12.00noon to 3.30pm</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="img/slide4.jpg" alt="image" style="width: 100%; height: 80vh;">
+                        <div class="carousel-caption">
+                            <h3 class="color">Snack</h3>
+                            <p>4.00pm to 6.30pm</p>
+                        </div>
+                    </div>
+                    <div class="item">
+                        <img src="img/slide5.jpg" alt="image" style="width:100%; height: 80vh;">
+                        <div class="carousel-caption">
+                            <h3 class="color">Dinner</h3>
+                            <p>7.00pm to 10.00pm</p>
+                        </div>
+                    </div>
+                </div>
+                <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+                <span class="sr-only">Previous</span></a>
+                <a class="right carousel-control" href="#myCarousel" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+                <span class="sr-only">Next</span></a>
+            </div>
+        </div>
+        <div class="container centering saying">
+            <h3>Hey foodie!!</h3>
+            <p id="fact"></p>
+        </div>
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4 centering bottom">
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <img src="img/Menu.jpg" alt="menu">
+                            </div>
+                            <div class="flip-card-back">
+                                <h3 class="bottom">Explore Your Menu</h3> 
+                                <a href="menu.html">Menu</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 centering bottom">
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <img src="img/about.jpg" alt="About">
+                            </div>
+                            <div class="flip-card-back">
+                                <h3 class="bottom">Know more About us</h3>
+                                <a href="about.html">About us</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 centering bottom">
+                    <div class="flip-card">
+                        <div class="flip-card-inner">
+                            <div class="flip-card-front">
+                                <img src="img/map.jfif" alt="map">
+                            </div>
+                            <div class="flip-card-back">
+                                <h3 class="bottom">Know about our location</h3>
+                                <a href="map.html">Map</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container bottom ">
+            <div class="del">
+                <p>For Free delivery contact:<br>1234567890</p>
+                <img src="img/PngItem_37779.png" alt="bike" class="bike">
+            </div>
+        </div>
+        <footer class="page-footer font-small special-color-dark pt-4 bg-footer">
+            <div class="container">
+                <ul class="list-unstyled list-inline text-center">
+                    <li class="list-inline-item">
+                      <a class="btn-floating btn-fb mx-1" href="#">
+                        <i class="fab fa-facebook-f"> </i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a class="btn-floating btn-tw mx-1" href="#">
+                        <i class="fab fa-twitter"> </i>
+                      </a>
+                    </li>
+                    <li class="list-inline-item">
+                      <a class="btn-floating btn-gplus mx-1" href="#">
+                        <i class="fab fa-google-plus-g"> </i>
+                      </a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-copyright text-center py-3">© 2021 Copyright:
+                <a href="index.html"> IndianRestarurent.com</a>
+            </div>
+        </footer>
+        <script src="./css and js/script.js"></script>
+
+    </body>
 </html>
