commit home page update_02

--- a/Home.html
+++ b/Home.html
@@ -37,8 +37,8 @@
                             <i style='font-size:24px;display:block'class="material-icons">&#xe000;</i>About Us</a>
                         </li>
                         <li>
-                            <a href="map.html"style="font-size:20px;color:brown;text-align:center">
-                            <i style="font-size:24px;display: block;" class="fa">&#xf041;</i>Map</a>
+                            <a href="Profile.html"style="font-size:20px;color:brown;text-align:center">
+                            <i style="font-size:24px;display: block;" class="fa">&#xf041;</i> Profile</a>
                         </li>
                     </ul>
                 </div>
