--- a/Home.html
+++ b/Home.html
@@ -22,7 +22,7 @@
     />
     <link rel="stylesheet" href="css and js/style.css" />
   </head>
-  <body style="background: brown">
+  <body style="background: #343a40">
     <nav class="navbar navbar-inverse" id="header-nav">
       <div class="container">
         <div class="navbar-header">
@@ -38,16 +38,16 @@
           </button>
           <a
             class="navbar-brand"
-            href="index.html"
-            style="font-size: 30px; color: brown"
+            href="Home.html"
+            style="font-size: 30px; color: #343a40"
           >
             <img
-              src="img/logo1.png"
+              src="img/rd_logo_01.jpg"
               alt="logo"
-              style="height: 50px; width: 50px"
+              style="height: 60px; width: 60px"
               class="pull-left visible-lg visible-md"
             />
-            <h3>Indian Restaurant</h3></a
+            <h3> Ramdhani</h3></a
           >
         </div>
         <div class="collapse navbar-collapse" id="mynavbar">
@@ -55,7 +55,7 @@
             <li>
               <a
                 href="menu.html"
-                style="font-size: 20px; color: brown; text-align: center"
+                style="font-size: 20px; color: #343a40; text-align: center"
               >
                 <i style="font-size: 24px; display: block" class="fas"
                   >&#xf2e7;</i
@@ -66,7 +66,7 @@
             <li>
               <a
                 href="about.html"
-                style="font-size: 20px; color: brown; text-align: center"
+                style="font-size: 20px; color: #343a40; text-align: center"
               >
                 <i
                   style="font-size: 24px; display: block"
@@ -78,10 +78,10 @@
             <li>
               <a
                 href="Profile.html"
-                style="font-size: 20px; color: brown; text-align: center"
+                style="font-size: 20px; color: #343a40; text-align: center"
               >
                 <i style="font-size: 24px; display: block" class="fa"
-                  >&#xf041;</i
+                  >&#xf2bd;</i
                 >
                 Profile</a
               >
@@ -92,7 +92,7 @@
     </nav>
     <div class="container bottom">
       <div class="del">
-        <p>For Free delivery contact:<br />1234567890</p>
+        <p>The best food you can get in ISM!<br />Ph no. 912345678</p>
         <img src="img/PngItem_37779.png" alt="bike" class="bike" />
       </div>
     </div>
@@ -113,7 +113,7 @@
               style="width: 100%; height: 80vh"
             />
             <div class="carousel-caption">
-              <h3 class="color">Welcome to Indian Restaurent</h3>
+              <h3 class="color">Welcome to Ramdhani</h3>
               <p>Have your food in a pleasant place</p>
             </div>
           </div>
@@ -246,8 +246,8 @@
         </ul>
       </div>
       <div class="footer-copyright text-center py-3">
-        © 2021 Copyright:
-        <a href="index.html"> IndianRestarurent.com</a>
+        © 2022 Copyright:
+        <a href="Home.html"> Ramdhani.com</a>
       </div>
     </footer>
     <script src="./css and js/script.js"></script>
