Improved CSS img

--- a/Home.html
+++ b/Home.html
@@ -42,7 +42,7 @@
             style="font-size: 30px; color: #343a40"
           >
             <img
-              src="img/rd_logo_01.jpg"
+              src="img/rd_logo_02.png"
               alt="logo"
               style="height: 60px; width: 60px"
               class="pull-left visible-lg visible-md"
