--- a/Profile.html
+++ b/Profile.html
@@ -1,6 +1,71 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel = "stylesheet" href="Profile.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Profile</title>
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"/>
+</head>
+<body>
+  <div id="id1">
+    <img src ="https://images6.fanpop.com/image/photos/41400000/cute-kitties-kitties-41455761-1600-1600.jpg" alt="cat image" height="200" width = "200">
+    <section id="id2">
+      <h1>Kainat Hussain</h1>
+      <h1>10000</h1>
+    </section>
+  </div>
+</body>
+</html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- <!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -9,9 +74,9 @@
 </head>
 <body>
     <nav>
-        <h1>JANE DOE</h1>
+        <h1 id="id1" style="color:purple;">Profile Page</h1>
         <ul class="navigation">
-          <li><a href="#about" class="nav-link">About</a></li>
+          <li><a href="#" class="nav-link">About</a></li>
           <li><a href="#skills" class="nav-link">Skills</a></li>
           <li><a href="#projects" class="nav-link">Projects</a></li>
           <li><a href="#contact" class="nav-link">Contact</a></li>
@@ -20,7 +85,7 @@
           <ion-icon class="bars" name="menu-outline"></ion-icon>
         </button>
   </nav>
-  <section class="hero" id="about">
+  <div class="hero" id="about">
     <img
       src="https://i.stack.imgur.com/w2kfR.png" alt ="Profile pic" width="300" height="300"
       alt="jane-doe"
@@ -36,8 +101,9 @@
         repudiandae quos!
       </p>
     </div>
-</section>
+  </div>
 <input type="number" value="2" min="1">
 
 </body>
-</html>
+</html>-->
+
