datatabase connection , login

--- a/Login.html
+++ b/Login.html
@@ -38,10 +38,10 @@ window.onload=function(){
 		</form>
 	</div>
 	<div class="form-container sign-in-container">
-		<form action="#">
+		<form action= "login.php" method="POST">
 			<h1>Sign in</h1>
-			<input type="email" placeholder="Email" />
-			<input type="password" placeholder="Password" />
+			<input type="email" id="email" name="email" placeholder="Email" />
+			<input type="password" id="pass" name="pass" placeholder="Password" />
 			<a href="#">Forgot your password?</a>
 			<button>Sign In</button>
 		</form>
