Profile page updated

--- a/Profile.html
+++ b/Profile.html
@@ -1,27 +1,122 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link rel = "stylesheet" href="Profile.css">
-  <meta charset="UTF-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Profile</title>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"/>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Profile Page</title>
+
+    <!-- Custom Css -->
+    <link rel="stylesheet" href="Profile.css">
+
+    <!-- FontAwesome 5 -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
 </head>
 <body>
-  <div id="id1">
-    <img src ="https://images6.fanpop.com/image/photos/41400000/cute-kitties-kitties-41455761-1600-1600.jpg" alt="cat image" height="200" width = "200">
-    <section id="id2">
-      <h1>Kainat Hussain</h1>
-      <h1>10000</h1>
-    </section>
-  </div>
+    <!-- Navbar top -->
+    <div class="navbar-top">
+        <div class="title">
+            <h1>My Profile</h1>
+        </div>
+
+        <!-- Navbar -->
+        <ul>
+
+            <li>
+                <a href="#sign-out">
+                    <i class="fa fa-sign-out-alt fa-2x"></i>
+                </a>
+            </li>
+        </ul>
+        <!-- End -->
+    </div>
+    <!-- End -->
+
+    <!-- Sidenav -->
+    <div class="sidenav">
+        <div class="profile">
+            <img src="https://imdezcode.files.wordpress.com/2020/02/imdezcode-logo.png" alt="" width="100" height="100">
+
+            <div class="name">
+                ImDezCode
+            </div>
+
+        </div>
+
+        <div class="sidenav-url">
+            <div class="url">
+                <a href="#profile" class="active">Profile</a>
+                <hr align="center">
+            </div>
+
+        </div>
+    </div>
+    <!-- End -->
+
+    <!-- Main -->
+    <div class="main">
+        <h2>IDENTITY :</h2>
+        <div class="card">
+            <div class="card-body">
+                <table>
+                    <tbody>
+                        <tr>
+                            <td>Name</td>
+                            <td>:</td>
+                            <td>ImDezCode</td>
+                        </tr>
+                        <tr>
+                            <td>Email</td>
+                            <td>:</td>
+                            <td>imdezcode@gmail.com</td>
+                        </tr>
+                        <tr>
+                            <td>Balance</td>
+                            <td>:</td>
+                            <td>1000 $</td>
+                        </tr>
+
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <h2>PREVIOUS ORDERS :</h2>
+        <div class="card">
+            <div class="card-body">
+              <form id="form1">
+      <div class="divTable">
+             <div class="headRow">
+                <div class="divCell" align="center">ORDER ID</div>
+                <div  class="divCell">TIME</div>
+                <div  class="divCell">VIEW</div>
+             </div>
+            <div class="divRow">
+                  <div class="divCell">001</div>
+                <div class="divCell">002</div>
+                <div class="divCell">003</div>
+            </div>
+            <div class="divRow">
+                <div class="divCell">xxx</div>
+                <div class="divCell">yyy</div>
+                <div class="divCell">www</div>
+           </div>
+            <div class="divRow">
+                <div class="divCell">ttt</div>
+                <div class="divCell">uuu</div>
+                <div class="divCell">Mkkk</div>
+           </div>
+
+      </div>
+  </form>
+
+</div>
+
+                </div>
+            </div>
+
+    <!-- End -->
 </body>
 </html>
-
-
-
-
 
 
 
@@ -106,4 +201,3 @@
 
 </body>
 </html>-->
-
