--- a/Home.html
+++ b/Home.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Indian Restaurant</title>
-    <link rel="icon" href="img/logo1.png" />
+    <title>Ramdhani 2.0</title>
+    <link rel="icon" href="img/rd_logo_02.png" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <link
@@ -47,20 +47,20 @@
               style="height: 60px; width: 60px"
               class="pull-left visible-lg visible-md"
             />
-            <h3> Ramdhani</h3></a
+            <h3>Ramdhani 2.0</h3></a
           >
         </div>
         <div class="collapse navbar-collapse" id="mynavbar">
           <ul class="nav navbar-nav navbar-right">
             <li>
               <a
-                href="menu.html"
+                href="Home.html"
                 style="font-size: 20px; color: #343a40; text-align: center"
               >
                 <i style="font-size: 24px; display: block" class="fas"
                   >&#xf015;</i
                 >
-                Menu</a
+                Home</a
               >
             </li>
             <li>
@@ -84,6 +84,17 @@
                   >&#xf2bd;</i
                 >
                 Profile</a
+              >
+            </li>
+            <li>
+              <a
+                href="Cart.html"
+                style="font-size: 20px; color: #343a40; text-align: center"
+              >
+                <i style="font-size: 24px; display: block" class="fa"
+                  >&#xf07a;</i
+                >
+                Cart</a
               >
             </li>
           </ul>
