--- a/Home.html
+++ b/Home.html
@@ -127,7 +127,7 @@
             </div>
             <div class="flip-card-back">
               <h3 class="bottom">Explore Tea of RD</h3>
-              <a href="menu.html">Menu</a>
+              <a href="items.html">Menu</a>
             </div>
           </div>
         </div>
@@ -141,7 +141,7 @@
             </div>
             <div class="flip-card-back">
               <h3 class="bottom">Explore Rolls of RD</h3>
-              <a href="about.html">Menu</a>
+              <a href="items.html">Menu</a>
             </div>
           </div>
         </div>
@@ -155,7 +155,7 @@
             </div>
             <div class="flip-card-back">
               <h3 class="bottom">All Grocery items available</h3>
-              <a href="about.html">Shop Here</a>
+              <a href="items.html">Shop Here</a>
             </div>
           </div>
         </div>
@@ -169,7 +169,7 @@
             </div>
             <div class="flip-card-back">
               <h3 class="bottom">Best Snacks of ISM</h3>
-              <a href="map.html">Menu</a>
+              <a href="items.html">Menu</a>
             </div>
           </div>
         </div>
