Developer Page Added

--- a/Home.html
+++ b/Home.html
@@ -220,8 +220,8 @@
       </ul>
     </div>
     <div class="footer-copyright text-center py-3">
-      © 2022 Copyright:
-      <a href="Home.html"> Ramdhani.com</a>
+      Developers 🗿 :
+      <a href="Developers.html"> Kasukabe Defence Group</a>
     </div>
     <br>
   </footer>
