--- a/Home.html
+++ b/Home.html
@@ -43,7 +43,7 @@
               <i style="font-size: 30px; display: block" class="material-icons">&#xe000;</i>About Us</a>
           </li>
           <li>
-            <a href="Profile.html" style="font-size: 24px; color: #dbe0e6; text-align: center">
+            <a href="Profile.php" style="font-size: 24px; color: #dbe0e6; text-align: center">
               <i style="font-size: 30px; display: block" class="fa">&#xf2bd;</i>
               Profile</a>
           </li>
