--- a/stalls/grocery_stall.html
+++ b/stalls/grocery_stall.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="items.css">
+    <script src="items.js"></script>
     <title>Ramdhani</title>
 </head>
 
 <body>
+
 
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
 <nav id="navbar" class="">
@@ -51,7 +54,7 @@
     <div class="wrapper">
         <div class="container">
           <div class="top"></div>
-          <div class="bottom">
+          <div class="bottom" >
             <div class="left">
               <div class="details">
                 <h1>Chair</h1>
