menu items connected with database

--- a/Home.html
+++ b/Home.html
@@ -155,7 +155,7 @@
             </div>
             <div class="flip-card-back">
               <h3 class="bottom">All Grocery items available</h3>
-              <a href="stalls/grocery_stall.html">Shop Here</a>
+              <a href="stalls/grocery_stall.php">Shop Here</a>
             </div>
           </div>
         </div>
