--- a/Developers.html
+++ b/Developers.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Audiowide">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
     <link rel="stylesheet" href="Developers.css">
     <title>Developers</title>
 </head>
@@ -46,6 +47,9 @@
 <div class="devs">
     <div class="mycontainer">
         <div class="modal">
+            <a href="https://github.com/chef-of-mint">
+                <span class="dev_github"></span>
+            </a>
             <div class="avatar">
                 <img src="img/abd.jpeg" alt="IMAGE" height="180px" width="180px" class="img_">
             </div>
@@ -59,6 +63,9 @@
       </div>
       <div class="mycontainer">
         <div class="modal">
+            <a href="https://github.com/adgarg2863">
+                <span class="dev_github"></span>
+            </a>
             <div class="avatar">
                 <img src="img/garg.jpg" alt="IMAGE" height="180px" width="180px" class="img_">
             </div>
@@ -72,6 +79,9 @@
       </div>
       <div class="mycontainer">
         <div class="modal">
+            <a href="https://github.com/chef-of-mint">
+                <span class="dev_github"></span>
+            </a>
             <div class="avatar">
                 <img src="img/kainat.jpg" alt="IMAGE" height="180px" width="180px" class="img_">
             </div>
@@ -85,6 +95,9 @@
       </div>
       <div class="mycontainer">
         <div class="modal">
+            <a href="https://github.com/mdhussain-28">
+                <span class="dev_github"></span>
+            </a>
             <div class="avatar">
                 <img src="img/samquib.jpg" alt="IMAGE" height="180px" width="180px" class="img_">
             </div>
