Admin login , add new product

--- a/Home.html
+++ b/Home.html
@@ -192,20 +192,41 @@
       <div class="about_all_text">
           <h1 class="about_h">About Us</h1>
           <div class="about_text">
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur, quisquam accusantium nostrum modi, nemo, officia veritatis ipsum facere maxime assumenda voluptatum enim! Labore maiores placeat impedit, vero sed est voluptas!Lorem ipsum dolor sit amet, consectetur adipisicing elit. Expedita alias dicta autem, maiores doloremque quo perferendis, ut obcaecati harum, <br><br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eum necessitatibus iste,
-              nulla recusandae porro minus nemo eaque cum repudiandae quidem voluptate magnam voluptatum? <br>Nobis, saepe sapiente omnis qui eligendi pariatur. quis voluptas. Assumenda facere adipisci quaerat. Illum doloremque quae omnis vitae.</p>
-              <p><b>Lonsectetur adipisicing elit. Blanditiis aspernatur, ratione dolore vero asperiores explicabo.</b></p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos ab itaque modi, reprehenderit fugit soluta, molestias optio repellat incidunt iure sed deserunt nemo magnam rem explicabo vitae. Cum, nostrum, quidem.</p>
+            <p>
+              The heartbeat of ISM and the essence of ISM culture. Late Ram
+              Dhani (aka RD) ji’s tea shop is one of those few places in the
+              campus that lets you get out of all the brouhaha attached with
+              engineering, and enjoy a cup of peace and happiness with your
+              friends. <br />My name is Shekhar and I have been the owner of Ram
+              Dhani Tea Stall for around forty five years. It has been an honour
+              to know so many generations of students and professors who have
+              come here. More than seventy years ago, when my father, the
+              'original' Ram Dhani, the namesake, established this shop, it was
+              located where the New Lecture Hall Complex stands today. We have
+              been shifted twice since then. This is our third shop and we have
+              been here for the past ten years. Just yesterday, three students
+              from twenty five years ago came here and met me, it was such an
+              enriching moment. These are the moments which are the highlights
+              of my week. <br />
+              To keep up with the times and cater to the modem crowds, we have
+              launched burgers and pav bhaji. Just the feeling which arises when
+              I see students come rushing from class at 9AM or 10AM for the
+              'Poori Sabji' is exhilarating.
+            </p>
+            <p>
+              <b
+                >I just wish you all well and desire that when you have reached
+                the heights of your success, come back and share your memories
+                with me.</b
+              >
+            </p>
           </div>  
         </div>
   </div>
   </div>
   
   <div class="container bottom">
-    <div class="del">
-      <p>For Free delivery contact:<br />1234567890</p>
-      <img src="img/PngItem_37779.png" alt="bike" class="bike" />
-    </div>
+    
   </div>
   <footer class="page-footer font-small special-color-dark pt-4 bg-footer">
     <div class="container">
