dev page corrected

--- a/Developers.html
+++ b/Developers.html
@@ -44,8 +44,8 @@
       <li><a href="#contact">Contact</a></li>
     </ul>
 </div>
-<div class="devs">
-    <div class="mycontainer">
+    <div class="devs">
+      <div class="mycontainer">
         <div class="modal">
             <a href="https://github.com/chef-of-mint">
                 <span class="dev_github"></span>
@@ -67,7 +67,7 @@
                 <span class="dev_github"></span>
             </a>
             <div class="avatar">
-                <img src="img/garg.jpg" alt="IMAGE" height="180px" width="180px" class="img_">
+                <img src="img/aditya.jpeg" alt="IMAGE" height="180px" width="180px" class="img_">
             </div>
             <div class="info">
                 Aditya Garg
@@ -79,11 +79,11 @@
       </div>
       <div class="mycontainer">
         <div class="modal">
-            <a href="https://github.com/chef-of-mint">
+            <a href="https://github.com/mk-hussain">
                 <span class="dev_github"></span>
             </a>
             <div class="avatar">
-                <img src="img/kainat.jpg" alt="IMAGE" height="180px" width="180px" class="img_">
+                <img src="img/kainat.png" alt="IMAGE" height="180px" width="180px" class="img_">
             </div>
             <div class="info">
                 Kainat Hussain
@@ -99,7 +99,7 @@
                 <span class="dev_github"></span>
             </a>
             <div class="avatar">
-                <img src="img/samquib.jpg" alt="IMAGE" height="180px" width="180px" class="img_">
+                <img src="img/samquib.jpeg" alt="IMAGE" height="180px" width="180px" class="img_">
             </div>
             <div class="info">
                 Md Saquib Hussain
@@ -110,5 +110,18 @@
         </div>
       </div>
     </div>
+    
+    
+
+    <div class="ask_star">
+        <script async defer src="https://buttons.github.io/buttons.js"></script>
+        <p>Shower some stars to our Repository :</p>  
+        <a class="github-button"
+        href="https://github.com/chef-of-mint/Ramdhani-2.0"
+        data-icon="octicon-star"
+        data-size="large"
+        data-show-count="true"
+        aria-label="Star ntkme/github-buttons on GitHub">Star</a>
+    </div>   
 </body>
 </html>
