last change in dev page

--- a/Developers.html
+++ b/Developers.html
@@ -67,7 +67,7 @@
                 <span class="dev_github"></span>
             </a>
             <div class="avatar">
-                <img src="img/aditya.jpeg" alt="IMAGE" height="180px" width="180px" class="img_">
+                <img src="img/garg.jpeg" alt="IMAGE" height="180px" width="180px" class="img_">
             </div>
             <div class="info">
                 Aditya Garg
