--- a/Home.html
+++ b/Home.html
@@ -232,17 +232,17 @@
     <div class="container">
       <ul class="list-unstyled list-inline text-center">
         <li class="list-inline-item">
-          <a class="btn-floating btn-fb mx-1" href="#">
+          <a class="btn-floating btn-fb mx-1" href="https://www.facebook.com/rd.pappu/">
             <i class="fab fa-facebook-f"> </i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="btn-floating btn-tw mx-1" href="#">
-            <i class="fab fa-twitter"> </i>
+          <a class="btn-floating btn-tw mx-1" href="https://youtu.be/dQw4w9WgXcQ">
+            <i class="fa fa-instagram" aria-hidden="true"></i>
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="btn-floating btn-gplus mx-1" href="#">
+          <a class="btn-floating btn-gplus mx-1" href="https://youtu.be/dQw4w9WgXcQ">
             <i class="fab fa-google-plus-g"> </i>
           </a>
         </li>
