--- a/Home.html
+++ b/Home.html
@@ -122,7 +122,7 @@
   </div>
   <div class="container centering saying" id="menu_section">
     <h3>Welcome to RD!!</h3>
-    <p>Hi amigo!</p>
+    <p>Select stall to order</p>
   </div>
   <div class="container">
     <div class="row">
@@ -237,8 +237,8 @@
           </a>
         </li>
         <li class="list-inline-item">
-          <a class="btn-floating btn-tw mx-1" href="https://youtu.be/dQw4w9WgXcQ">
-            <i class="fa fa-instagram" aria-hidden="true"></i>
+          <a class="btn-floating btn-tw mx-1" href="https://freeimage.host/i/ylhCp1">
+            <i class="fab fa-instagram" aria-hidden="true"></i>
           </a>
         </li>
         <li class="list-inline-item">
