finalized theme and wallet update done

--- a/Developers.html
+++ b/Developers.html
@@ -16,7 +16,7 @@
     <!-- Navbar Logo -->
     <div class="logo">
       <!-- Logo Placeholder for Inlustration -->
-      <a href="Profile.html"><i class="fa fa-angellist"></i> Developers</a>
+      <a href="Developers.html"><i class="fa fa-angellist"></i> Developers</a>
     </div>
 
     <!-- Navbar Links -->
