--- a/Login.html
+++ b/Login.html
@@ -43,7 +43,7 @@ window.onload=function(){
 			<h1>Sign in</h1>
 			<input type="email" id="email" name="email" placeholder="Email" />
 			<input type="password" id="pass" name="pass" placeholder="Password" />
-			<a href="#">Forgot your password?</a>
+			<a href="admin/">Login as Admin</a>
 			<button>Sign In</button>
 		</form>
 	</div>
