--- a/Home.html
+++ b/Home.html
@@ -226,9 +226,12 @@
   </div>
   
   <div class="container bottom">
-    
   </div>
-  <footer class="page-footer font-small special-color-dark pt-4 bg-footer">
+
+
+ 
+
+  <footer class="page-footer font-small special-color-dark pt-4 bg-footer" style="width: 100%;">
     <div class="container">
       <ul class="list-unstyled list-inline text-center">
         <li class="list-inline-item">
@@ -255,6 +258,11 @@
     <br>
   </footer>
   <script src="./css and js/script.js"></script>
+
+  <div class="loading">
+    <div class="image">
+    <img src="img/rd_logo_02.png" alt="RD LOGO">    
+  </div>
 </body>
 
 </html>
