Order cost deduction

--- a/Developers.html
+++ b/Developers.html
@@ -51,7 +51,7 @@
                 <span class="dev_github"></span>
             </a>
             <div class="avatar">
-                <img src="img/abd.jpeg" alt="IMAGE" height="180px" width="180px" class="img_">
+                <img src="img/abd.jpg" alt="IMAGE" height="180px" width="180px" class="img_">
             </div>
             <div class="info">
                 Abdullah
@@ -115,13 +115,18 @@
 
     <div class="ask_star">
         <script async defer src="https://buttons.github.io/buttons.js"></script>
-        <p>Shower some stars to our Repository :</p>  
+        <p>Shower some stars on our Repository</p>  
         <a class="github-button"
         href="https://github.com/chef-of-mint/Ramdhani-2.0"
         data-icon="octicon-star"
         data-size="large"
         data-show-count="true"
         aria-label="Star ntkme/github-buttons on GitHub">Star</a>
-    </div>   
+    </div> 
+    
+    <div class="loading">
+        <div class="image">
+        <img src="img/rd_logo_02.png" alt="RD LOGO">    
+    </div>
 </body>
 </html>
